--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -5,10 +7,98 @@
 }
 
 body {
-  background-color: #f9fafb;
-  font-family: "Open Sans", sans-serif;
+  background-color: #242333;
+  font-family: "Lato", sans-serif;
+  color: white;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+}
+
+.movie-container {
+  margin: 1.5rem 0;
+}
+
+.movie-container select {
+  background-color: white;
+  border: 0;
+  border-radius: 0.2rem;
+  font-size: 1rem;
+  margin-left: 0.2rem;
+  padding: 0.5rem 1rem 0.5rem 0.5rem;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.container {
+  perspective: 50rem;
+  margin-bottom: 3rem;
+}
+
+.seat {
+  background-color: #444451;
+  height: 2rem;
+  width: 2.5rem;
+  margin: 0.6rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.seat.selected {
+  background-color: #6feaf6;
+}
+
+.seat.occupied {
+  background-color: white;
+}
+
+.seat:nth-of-type(2),
+.seat:nth-of-type(6) {
+  margin-right: 2.5rem;
+}
+
+.container .seat:not(.occupied):hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.showcase {
+  background: rgba(0, 0, 0, 0.1);
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  color: #777;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.showcase li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 1rem;
+}
+
+.row {
+  display: flex;
+}
+
+.screen {
+  background-color: white;
+  height: 7rem;
+  width: 100%;
+  margin: 4rem 0;
+  transform: rotateX(-45deg);
+  box-shadow: 0 0.1rem 2rem rgba(255, 255, 255, 0.7);
+}
+
+.text {
+  margin: 0.5rem 0;
+}
+
+.text span {
+  color: #6feaf6;
 }
