--- a/style.css
+++ b/style.css
@@ -93,6 +93,13 @@ body {
   margin: 4rem 0;
   transform: rotateX(-45deg);
   box-shadow: 0 0.1rem 2rem rgba(255, 255, 255, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.screen p {
+  color: grey
 }
 
 .text {
